<resources>
    <string name="app_name">SeJo</string>
    <string name="get_started">Get Started</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_your_name">Enter your name:</string>
    <string name="enter_your_email_id">Enter your email id:</string>
    <string name="re_type_your_password">Re - type your password:</string>
    <string name="create_a_password">Create a password</string>
    <string name="enter_your_contact_number">Enter your contact number:</string>
    <string name="register1">Register</string>
    <string name="register2">Register</string>
    <string name="login1">Login</string>
    <string name="enter_your_email_id1">Enter your email id:</string>
    <string name="enter_the_password">Enter the password:</string>
    <string name="house_maid">House Maid</string>
    <string name="other_jobs">Other Jobs</string>
    <string name="search_a_job">Search a Job</string>
    <string name="need_housemaid">Need Housemaid</string>
    <string name="okay">Okay</string>
    <string name="you_have_successfully_registered_your_account">You have successfully registered your account</string>
    <string name="todo1">TODO</string>
    <string name="you_have_successfully_registered">You have successfully registered</string>
    <string name="todo2">TODO</string>
    <string name="success">Success</string>
    <string name="congratulations_you_have_successfully_registered">Congratulations! you have successfully registered.</string>
    <string name="cancel">Cancel</string>
    <string name="okay1">Okay</string>
    <string name="todo3">TODO</string>
    <string name="recruit_a_person">Recruit a person</string>
    <string name="search_for_job">Search for Job</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="sign_in">Sign In</string>
    <string name="create_a_password1">Create a password:</string>
    <string name="abc">******</string>
    <string name="abc1">******</string>
    <string name="sign_up">Sign Up</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="xyz">xyz</string>
    <string name="_1234567890">1234567890</string>
    <string name="title_activity_need_housemaid">Need_Housemaid</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="navigation_open">Open Navigation Drawer</string>
    <string name="navigation_close">Close Navigation Drawer</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="looking_for_a_job_opportunity_or_willing_to_hire_a_worker_for_your_personal_or_work_purpose">Looking for a job opportunity or willing to hire a worker for your personal or work purpose ???</string>
    <string name="todo12">TODO</string>
    <string name="SeJo">SeJo</string>
    <string name="todo13">TODO</string>
    <string name="an_application_for_local_jobs">An application for Local Jobs</string>
    <string name="home">Home</string>
    <string name="house_maid1">House Maid</string>
    <string name="other_jobs1">Other Jobs</string>
    <string name="authentication">Authentication</string>
    <string name="login2">Login</string>
    <string name="logout2">Logout</string>
    <string name="sharing">Sharing</string>
    <string name="share">Share</string>
    <string name="refer">Refer</string>
    <string name="toolbar">Toolbar</string>
    <string name="abc_gmail_com1">abc@gmail.com</string>
    <string name="password">******</string>
    <string name="select_the_jobs">Select the jobs</string>
    <string name="age">**</string>
    <string name="age1">Age</string>
    <string name="house_maid_profile">House Maid Profile</string>
    <string name="post_the_details">Post the details</string>
    <string name="create_your_profile">Create your profile</string>
    <string name="select_the_jobs_which_you_can_do">Select the jobs which you can do:</string>
    <string name="select_your_preferred_working_hours">Select your preferred working hours</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="upload_your_profile_photo">Upload your profile photo:</string>
    <string name="todo14">TODO</string>
    <string name="todo15">TODO</string>
</resources>