<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_menu"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/house_maid"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/house_maid1" />
        <item
            android:id="@+id/other_jobs"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/other_jobs1" />
    </group>

    <group android:checkableBehavior="single">

        <item android:title="@string/authentication">
            <menu>

                <item
                    android:id="@+id/login_menu"
                    android:icon="@drawable/baseline_login_24"
                    android:title="@string/login2" />
                <item
                    android:id="@+id/logout_menu"
                    android:icon="@drawable/baseline_logout_24"
                    android:title="@string/logout2" />

            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">

        <item android:title="@string/sharing">

            <menu>
                <item
                    android:id="@+id/share_menu"
                    android:icon="@drawable/baseline_share_24"
                    android:title="@string/share" />

                <item
                    android:id="@+id/refer_menu"
                    android:icon="@drawable/baseline_person_add_24"
                    android:title="@string/refer" />
            </menu>
        </item>
    </group>
</menu>